--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroui/react": "^2.7.8",
+    "@nextui-org/react": "^2.6.11",
     "framer-motion": "^12.12.1",
     "next": "13.5.11",
     "react": "^18",
