--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@heroui/react": "^2.7.8",
+    "@hookform/resolvers": "^5.0.1",
     "@nextui-org/react": "^2.6.11",
     "framer-motion": "^12.12.1",
     "next": "13.5.11",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.5.0"
+    "react-hook-form": "^7.56.4",
+    "react-icons": "^5.5.0",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@types/node": "^20",
