--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.9.1",
     "@heroui/react": "^2.7.8",
     "@hookform/resolvers": "^5.0.1",
     "@nextui-org/react": "^2.6.11",
+    "@prisma/client": "^6.8.2",
     "framer-motion": "^12.12.1",
     "next": "13.5.11",
+    "next-auth": "^4.24.11",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.56.4",
@@ -28,6 +31,7 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.11",
     "postcss": "^8",
+    "prisma": "^6.8.2",
     "tailwindcss": "^3",
     "typescript": "^5"
   }
