--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.1",
@@ -14,6 +15,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@nextui-org/react": "^2.6.11",
     "@prisma/client": "^6.8.2",
+    "bcryptjs": "^3.0.2",
     "framer-motion": "^12.12.1",
     "next": "13.5.11",
     "next-auth": "^4.24.11",
@@ -24,6 +26,7 @@
     "zod": "^3.24.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^3.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
