--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.5",
     "zod": "^3.24.4"
   },
   "devDependencies": {
