--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@prisma/client": "^6.8.2",
     "bcryptjs": "^3.0.2",
     "framer-motion": "^12.12.1",
-    "next": "13.5.11",
-    "next-auth": "^5.0.0-beta.28",
+    "next": "^14.1.0",
+    "next-auth": "^4.24.11",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.56.4",
